# cb_gdbmi

./: Debugger_GDB_MI.cpp  Debugger_GDB_MI.h  Makefile.am  TODO  bootstrap  codeblocks-debugger-gdbmi.spec.in  configure.ac  debbugger_gdbmi.cbp  debbugger_gdbmi.workspace  pack.bat  test.cbp
resource/: debugger_gdbmi_menu.xrc  manifest.xml
src/: actions.cpp  actions.h  cmd_queue.cpp  cmd_queue.h  cmd_result_parser.cpp  cmd_result_parser.h  cmd_result_tokens.cpp  cmd_result_tokens.h  config.cpp  config.h  definitions.cpp  definitions.h  escape.cpp  escape.h  events.cpp  events.h  frame.cpp  frame.h  gdb_executor.cpp  gdb_executor.h  helpers.cpp  helpers.h  plugin.cpp  plugin.h  updated_variable.cpp  updated_variable.h
tests/: common.h  mock_command_executor.h  mock_logger.h  test_action_watches.cpp  test_cmd_queue.cpp  test_escaping.cpp  test_find_watches.cpp  test_frame.cpp  test_helpers.cpp  test_result_parser.cpp  test_updated_variable.cpp  test_watches.cpp
wxsmith/: config_panel.wxs
